Support delayMilliseconds option on login() and logout().

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
         <button onclick="app.showAddress()">Show address</button>
         <button onclick="app.signTransactions()">Sign transactions</button>
         <button onclick="app.showSignedTransactions()">Show signed transactions</button>
+        <button onclick="app.logout()">Logout</button>
     </div>
 
     <script src="../out-examples/app.js"></script>
