fix example folder imports

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,7 +14,7 @@
         <button onclick="app.logout()">Logout</button>
     </div>
 
-    <script src="../out-examples/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
